--- a/templates/assets/css/main.css
+++ b/templates/assets/css/main.css
@@ -4137,3 +4137,17 @@ article.blog-single .blog-content {
         display: none;
     }
 }
+
+.kit{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
+}
+
+
+
+
+
+
+
+
+
