--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="assets/css/base.css">
     <link rel="stylesheet" href="assets/css/vendor.css">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 
     <!-- script
     ================================================== -->
@@ -72,32 +74,25 @@
 
         <div class="home-content">
 
-            <div class="row home-content__main">
+            <div class="w3-row-padding">
+                <div class="w3-half">
+                        <div class="row">
 
-                <h3>Hello There</h3>
-
-                <h1>
-                    BLOGuP. <br>
-                    Our First node JS project <br>
-                    developers based in Somewhere.
-                </h1>
-
-                <div class="home-content__buttons">
-                    <a href="#works" class="smoothscroll btn btn--stroke">
-                        Latest Projects
-                    </a>
-                    <a href="#about" class="smoothscroll btn btn--stroke">
-                        More About Me
-                    </a>
+                                <h2 class="kit">
+                                        BLOGuP. <br>
+                                        Our First node JS project <br>
+                                        developers based in Somewhere.
+                                </h2>          
+                        </div>
                 </div>
+                <div class="w3-half">
 
-                <div class="home-content__scroll">
-                    <a href="#about" class="scroll-link smoothscroll">
-                        <span>Scroll Down</span>
-                    </a>
                 </div>
-
+                
             </div>
+                
+                
+           
 
         </div> <!-- end home-content -->
 
