--- a/templates/assets/css/base.css
+++ b/templates/assets/css/base.css
@@ -49,8 +49,8 @@ article, aside, footer, header, nav, section {
 }
 
 h1 {
-    font-size: 2em;
-    margin: 0.67em 0;
+    /* font-size: 2em; */
+    /* margin: 0.67em 0; */
 }
 
 figcaption, figure, main {
